--- a/style.css
+++ b/style.css
@@ -3,3 +3,16 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+body{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+button{
+    border: 1px solid pink;
+    padding: 10px 20px;
+    background-color: pink;
+    color: white;
+}
